--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -206,13 +206,11 @@ endif()
 
 if (enable_gc_debug)
   add_definitions("-DDBG_HDRS_ALL -DKEEP_BACK_PTRS")
-  if (HOST MATCHES ia64-.*-linux.*|i586-.*-linux.*|i686-.*-linux.*|x86-.*-linux.*|x86_64-.*-linux.*)
+  if (HOST MATCHES i.86-.*-dgux.*|ia64-.*-linux.*|i586-.*-linux.*|i686-.*-linux.*|x86-.*-linux.*|x86_64-.*-linux.*)
     add_definitions("-DMAKE_BACK_GRAPH")
-    add_definitions("-DSAVE_CALL_COUNT=8")
-    set(SRC ${SRC} backgraph.c)
-  endif()
-  if (HOST MATCHES i.86-.*-dgux.*)
-    add_definitions("-DMAKE_BACK_GRAPH")
+    if (HOST MATCHES .*-.*-.*linux.*)
+      add_definitions("-DSAVE_CALL_COUNT=8")
+    endif()
     set(SRC ${SRC} backgraph.c)
   endif()
 endif(enable_gc_debug)
