--- a/appveyor.yml
+++ b/appveyor.yml
@@ -11,6 +11,7 @@ environment:
     CMAKE_OPTIONS: -Dbuild_tests=ON -Denable_cplusplus=ON -Denable_large_config=ON
   - TARGET: cmake
     CMAKE_CONFIG: Release
+    CMAKE_OPTIONS: -Denable_parallel_mark=OFF
   - TARGET: nmake
     BLD: debug
     CPU: x86
