Travis CI: Disable static libs for multi-threaded redirect-malloc test

--- a/.travis.yml
+++ b/.travis.yml
@@ -217,7 +217,7 @@ matrix:
   - os: linux
     compiler: gcc
     env:
-    - CONF_OPTIONS="--enable-redirect-malloc --enable-gc-debug --enable-cplusplus --enable-gc-assertions"
+    - CONF_OPTIONS="--enable-redirect-malloc --enable-gc-debug --enable-cplusplus --enable-gc-assertions --disable-static"
   - os: linux
     compiler: clang
     env:
