Add dummy target for mono client (a cherry-pick of commit b762dda6 from Unity-Technologies/bdwgc)
* Makefile.am (test-bundle): New target (empty).

--- a/Makefile.am
+++ b/Makefile.am
@@ -223,3 +223,6 @@ include tests/tests.am
 include doc/doc.am
 ## Putting these at the top causes cord to be built first, and not find
 ## libgc.a on HP/UX.  There may be a better fix.
+
+# A dummy target for mono build.
+test-bundle:
