Support GCC MCF thread model (mcfgthreads) in configure (MinGW)
* configure.ac [$THREADS=mcf] (GC_THREADS): Define (treat "mcf" the
same as "win32").

--- a/configure.ac
+++ b/configure.ac
@@ -282,7 +282,7 @@ case "$THREADS" in
         ;;
     esac
     ;;
- win32)
+ mcf | win32)
     AC_DEFINE(GC_THREADS)
     use_parallel_mark=$enable_parallel_mark
     if test "${enable_parallel_mark}" != no \
