--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,12 @@
 # Git repo attributes.
 
-# Ensure all text files have normalized (LF) line endings in the repository.
+# Ensure shell and configure-related files have LF enforced.
+*.ac text eol=lf
+*.am text eol=lf
+*.m4 text eol=lf
+*.sh text eol=lf
+
+# Ensure all text files have normalized line endings in the repository.
 * text=auto
 
 # These files should use CR/LF line ending:
