Fix 'unknown CMake command check_include_file' build error (fix of commit 08405546d)
* CMakeLists.txt (CheckIncludeFiles): Include module.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,6 +31,7 @@ else()
 endif()
 
 include(CheckFunctionExists)
+include(CheckIncludeFiles)
 include(CTest)
 
 # Customize the build by passing "-D<option_name>=ON|OFF" in the command line.
