Fix spelling of CheckIncludeFile module name in CMake script (fix of commits 08405546d, d42f5377a)
* CMakeLists.txt (CheckIncludeFile): Include module (instead of
CheckIncludeFiles).

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,7 +32,7 @@ endif()
 
 include(CheckCCompilerFlag)
 include(CheckFunctionExists)
-include(CheckIncludeFiles)
+include(CheckIncludeFile)
 include(CTest)
 
 # Customize the build by passing "-D<option_name>=ON|OFF" in the command line.
