New CMake option (disable_gc_debug) to remove debugging code
This is similar to configure --disable-gc-debug.

* CMakeLists.txt (disable_gc_debug): New option.
* CMakeLists.txt [disable_gc_debug] (NO_DEBUGGING): Define macro.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,6 +49,7 @@ option(enable_throw_bad_alloc_library "Turn on C++ gctba library build" ON)
 option(enable_gcj_support "Support for gcj" ON)
 option(enable_sigrt_signals "Use SIGRTMIN-based signals for thread suspend/resume" OFF)
 option(enable_gc_debug "Support for pointer back-tracing" OFF)
+option(disable_gc_debug "Disable debugging like GC_dump and its callees" OFF)
 option(enable_java_finalization "Support for java finalization" ON)
 option(enable_atomic_uncollectable "Support for atomic uncollectible allocation" ON)
 option(enable_redirect_malloc "Redirect malloc and friends to GC routines" OFF)
@@ -214,6 +215,10 @@ if (enable_gc_debug)
     set(SRC ${SRC} backgraph.c)
   endif()
 endif(enable_gc_debug)
+
+if (disable_gc_debug)
+  add_definitions("-DNO_DEBUGGING")
+endif()
 
 if (enable_redirect_malloc)
   if (enable_gc_debug)
