--- a/appveyor.yml
+++ b/appveyor.yml
@@ -11,7 +11,7 @@ environment:
   - TARGET: cmake
     CFLAGS_EXTRA: -DGC_NO_INLINE_STD_NEW -DNO_MSGBOX_ON_ERROR
     CMAKE_CONFIG: Release
-    CMAKE_OPTIONS: -Dbuild_tests=ON -Denable_cplusplus=ON -Denable_large_config=ON
+    CMAKE_OPTIONS: -Dbuild_tests=ON -Denable_cplusplus=ON -Denable_large_config=ON -Ddisable_gc_debug=ON
   - TARGET: cmake
     CMAKE_CONFIG: Release
     CMAKE_OPTIONS: -Denable_parallel_mark=OFF
