--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -64,6 +64,7 @@ option(enable_checksums "Report erroneously cleared dirty bits" OFF)
 option(enable_werror "Pass -Werror to the C compiler (treat warnings as errors)" OFF)
 option(enable_single_obj_compilation "Compile all libgc source files into single .o" OFF)
 option(enable_handle_fork "Attempt to ensure a usable collector after fork()" ON)
+option(disable_handle_fork "Prohibit installation of pthread_atfork() handlers" OFF)
 option(install_headers "Install header files" ON)
 
 add_definitions("-DALL_INTERIOR_POINTERS -DNO_EXECUTE_PERMISSION")
@@ -150,14 +151,14 @@ if (CMAKE_USE_PTHREADS_INIT)
   if (ANDROID OR MSYS) # ANDROID variable is defined by CMake v3.7.0+.
     # Android NDK does not provide pthread_atfork.
   elseif (APPLE)
-    if (enable_handle_fork)
+    if (enable_handle_fork AND NOT disable_handle_fork)
       # The incremental mode conflicts with fork handling.
       if (enable_parallel_mark)
         add_definitions("-DHANDLE_FORK")
-      endif()
-    endif(enable_handle_fork)
+      endif(enable_parallel_mark)
+    endif()
     set(SRC ${SRC} darwin_stop_world.c)
-  elseif (enable_handle_fork)
+  elseif (enable_handle_fork AND NOT disable_handle_fork)
     add_definitions("-DHANDLE_FORK")
   endif()
   if (enable_sigrt_signals)
@@ -180,6 +181,10 @@ elseif (CMAKE_USE_WIN32_THREADS_INIT)
   set(SRC ${SRC} win32_threads.c)
 elseif (CMAKE_HP_PTHREADS_INIT OR CMAKE_USE_SPROC_INIT)
   message(FATAL_ERROR "Unsupported thread package")
+endif()
+
+if (disable_handle_fork)
+  add_definitions("-DNO_HANDLE_FORK")
 endif()
 
 if (enable_gcj_support)
